# Veriface-AI

./: .gitignore  README.md  structure.txt
backend/: attendance.db  main.py  pyproject.toml  test.db
backend/scripts/: build_embeddings.py  create_admin.py  fix_image_path.py  register_face.py  test_camera.py
backend/src/: main.py  server.py
backend/src/api/: __init__.py  attendance.py  auth.py  classroom.py  health.py  recognition.py  registration.py  users.py
backend/src/core/: attendance_manager.py  camera.py  config.py  dependencies.py  embedding_manager.py  face_detector.py  face_recognizer.py  security.py
backend/src/db/: __init__.py  database.py  models.py
backend/src/schemas/: __init__.py  attendance.py  auth.py  user.py
backend/src/utils/: __init__.py  file_utils.py  image_utils.py  time_utils.py
backend/tests/: conftest.py  test_attendance.py  test_auth.py  test_camera.py  test_recognition.py  test_registration.py
frontend/: index.html
frontend/src/: App.jsx  main.jsx
frontend/src/api/: adminApi.js  attendance.js  classroom.js  httpAdmin.js  httpPublic.js  index.js  publicApi.js  recognition.js  registration.js  users.js
frontend/src/auth/: AdminOnly.jsx  AuthContext.jsx  ProtectedRoute.jsx
frontend/src/components/: AttendanceTable.jsx  RecognizeUser.jsx  RegisterUser.jsx  UserManagement.jsx  WebcamCapture.jsx
frontend/src/context/: ClassroomContext.jsx
frontend/src/hooks/: useAttendance.js  useCamera.js  useClassroom.js
frontend/src/pages/: AttendancePage.jsx  ClassroomDashboardPage.jsx  ClassroomListPage.jsx  Dashboard.jsx  FaceScanPage.jsx  LandingPage.jsx  LoginPage.jsx  RegisterUserpage.jsx  UserDetailsPage.jsx  UsersPage.jsx
frontend/src/routes/: AppRouter.jsx
frontend/src/theme/: styles.css
frontend/src/utils/: auth.js
testing/: bulk_register.py  generate_json.py  users.json
(+11 files in other folders)
