[project]
name = "face-attendance-system-backend"
version = "0.1.0"
description = "AI-powered Face Recognition Attendance System using FastAPI and DeepFace"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Sabarna Guha" }
]

# -------------------- CORE DEPENDENCIES --------------------
dependencies = [
    # -------- Web Framework --------
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    # -------- AI / CV --------
    "deepface>=0.0.92",
    "opencv-python>=4.9.0.80",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    # -------- Config & Validation --------
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    # -------- Database (Optional / Future) --------
    "sqlalchemy>=2.0.25",
    # -------- Utilities --------
    "python-multipart>=0.0.9", # for UploadFile / Form
    "python-dotenv>=1.0.1",
    # -------- Logging / Stability --------
    "loguru>=0.7.2",
    "tf-keras>=2.20.1",
    "passlib[argon2,bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "pytest>=9.0.2",
    "httpx>=0.28.1",
]

# -------------------- OPTIONAL / DEV DEPENDENCIES --------------------
[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "httpx>=0.27.0",
    "black>=24.3.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

# -------------------- TOOL CONFIGS --------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

# -------------------- BUILD SYSTEM --------------------
[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
